@@ -157,6 +157,7 @@ namespace gui
 		void recalculateItemHeight();
 		void selectNew(s32 ypos, bool onlyHover=false);
 		void recalculateScrollPos();
+		void updateScrollBarSize(s32 size);
 
 		// extracted that function to avoid copy&paste code
 		void recalculateItemWidth(s32 icon);
@@ -170,6 +171,7 @@ namespace gui
 		s32 ItemHeightOverride;
 		s32 TotalItemHeight;
 		s32 ItemsIconWidth;
+		s32 ScrollBarSize;
 		gui::IGUIFont* Font;
 		gui::IGUISpriteBank* IconBank;
 		gui::IGUIScrollBar* ScrollBar;
